# computergraphics-SS-24

./: .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: gl.h
ext/imgui/: CMakeLists.txt
ext/stb_image/: CMakeLists.txt
resources/: fragment0.glsl  vertex0.glsl
src/: App.hpp  Image.hpp  ObjectLoader.hpp  Resources.hpp  Scanline.hpp  Shader.hpp  Transform.hpp  main.cpp
